// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View -> About should render the About view (loading) without throwing an error 1`] = `
<Memo()
  loading={true}
>
  <styles__Container
    isLoading={false}
  >
    <div
      className="styles__Container-qm8p7s-0 bLSmSO"
    >
      <styles__Bg>
        <div
          className="styles__Bg-qm8p7s-1 jLNyeV"
        >
          <Memo()
            isLoading={false}
          >
            <styles__Container
              isLoading={false}
            >
              <div
                className="styles__Container-sc-1pwogyu-0 fxQxCi"
              >
                <styles__Polygon>
                  <div
                    className="styles__Polygon-sc-1pwogyu-1 cXqKUn"
                  >
                    <styles__Front>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Front-sc-1pwogyu-8 ctLBcZ"
                      >
                        <Memo()
                          cycleColor={true}
                          direction="left"
                        >
                          <styles__Tracer
                            cycleColor={true}
                            direction="left"
                          >
                            <div
                              className="styles__Tracer-sc-18vfsm6-0 ixIudz"
                              direction="left"
                            />
                          </styles__Tracer>
                        </Memo()>
                      </div>
                    </styles__Front>
                    <styles__Back>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Back-sc-1pwogyu-3 bPrYvv"
                      >
                        <Memo()
                          cycleColor={true}
                        >
                          <styles__Tracer
                            cycleColor={true}
                          >
                            <div
                              className="styles__Tracer-sc-18vfsm6-0 fsXOaX"
                            />
                          </styles__Tracer>
                        </Memo()>
                      </div>
                    </styles__Back>
                    <styles__Top>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Top-sc-1pwogyu-6 cBRihP"
                      />
                    </styles__Top>
                    <styles__Bottom>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Bottom-sc-1pwogyu-7 fhmhBQ"
                      >
                        <Memo()
                          cycleColor={true}
                        >
                          <styles__Tracer
                            cycleColor={true}
                          >
                            <div
                              className="styles__Tracer-sc-18vfsm6-0 fsXOaX"
                            />
                          </styles__Tracer>
                        </Memo()>
                      </div>
                    </styles__Bottom>
                    <styles__Left>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Left-sc-1pwogyu-5 bjjeEn"
                      >
                        <Memo()
                          cycleColor={true}
                          direction="left"
                        >
                          <styles__Tracer
                            cycleColor={true}
                            direction="left"
                          >
                            <div
                              className="styles__Tracer-sc-18vfsm6-0 ixIudz"
                              direction="left"
                            />
                          </styles__Tracer>
                        </Memo()>
                      </div>
                    </styles__Left>
                    <styles__Right>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Right-sc-1pwogyu-4 jfedfq"
                      >
                        <Memo()
                          cycleColor={true}
                        >
                          <styles__Tracer
                            cycleColor={true}
                          >
                            <div
                              className="styles__Tracer-sc-18vfsm6-0 fsXOaX"
                            />
                          </styles__Tracer>
                        </Memo()>
                      </div>
                    </styles__Right>
                  </div>
                </styles__Polygon>
              </div>
            </styles__Container>
          </Memo()>
        </div>
      </styles__Bg>
      <styles__ProfilePhoto
        alt="Me"
        src="/assets/images/profile.jpg"
      >
        <img
          alt="Me"
          className="styles__ProfilePhoto-qm8p7s-2 bLzqZE"
          src="/assets/images/profile.jpg"
        />
      </styles__ProfilePhoto>
      <styles__Content>
        <div
          className="styles__Content-qm8p7s-3 bPqKyZ"
        >
          <p>
            Hi! I'm David, and I like making things.
            <br />
            <br />
            Since I was a kid I've been passionate about building and creating. I've always enjoyed the journey of taking an idea from concept and making it reality.
            <br />
            <br />
            I firmly believe that by empowering people with problem solving technology and empathy we can build a better world together.
          </p>
          <h2>
            Engineer
          </h2>
          <p>
            I've been building web projects for over a decade, starting from when I was in high school and needed a simple HTML page to display my artwork. From there my journey has taken me to Full-Stack LAMP Development working on vendor-side and agency projects alike, and then to leading Front-End and UX Engineering specialising in HTML5, CSS3, ES6 JavaScript and React. I love learning about new technologies to develop better and more effective ways to solve problems and get things done.
          </p>
          <h2>
            Artist
          </h2>
          <p>
            Drawing has been my happy place for as long as I can remember. While building software keeps the puzzle solving part of my brain busy, illustration, artwork, and tinkering have allowed me to stretch my creative boundaries. In my downtime I've drawn comics, exhibited artwork, designed and produced 3D prints, and made 
            <styles__SleeperLink
              href="https://www.youtube.com/watch?v=7xk4LmZ6hwc"
              rel="noopener noreferrer"
              target="_blank"
            >
              <Memo()
                className="styles__SleeperLink-qm8p7s-6 dpPLMK"
                href="https://www.youtube.com/watch?v=7xk4LmZ6hwc"
                rel="noopener noreferrer"
                target="_blank"
              >
                <styles__Link
                  className="styles__SleeperLink-qm8p7s-6 dpPLMK"
                  href="https://www.youtube.com/watch?v=7xk4LmZ6hwc"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <a
                    className="styles__Link-sc-1rd8ebj-0 fmVTeT styles__SleeperLink-qm8p7s-6 dpPLMK"
                    href="https://www.youtube.com/watch?v=7xk4LmZ6hwc"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    other random things
                  </a>
                </styles__Link>
              </Memo()>
            </styles__SleeperLink>
             simply because they were too much fun.
          </p>
          <h2>
            About this site
          </h2>
          fantasticmrdavid.com.au was built with:
          <styles__SiteSpecs>
            <div
              className="styles__SiteSpecs-qm8p7s-4 fPddKv"
            >
              <styles__SpecsSection>
                <div
                  className="styles__SpecsSection-qm8p7s-5 gJxJfb"
                >
                  <h3>
                    Environment
                  </h3>
                  <ul>
                    <li>
                      ES6
                    </li>
                    <li>
                      Node.js
                    </li>
                    <li>
                      Webpack
                    </li>
                  </ul>
                </div>
              </styles__SpecsSection>
              <styles__SpecsSection>
                <div
                  className="styles__SpecsSection-qm8p7s-5 gJxJfb"
                >
                  <h3>
                    Architecture
                  </h3>
                  <ul>
                    <li>
                      React
                    </li>
                    <li>
                      Redux
                    </li>
                    <li>
                      Styled-Components
                    </li>
                  </ul>
                </div>
              </styles__SpecsSection>
              <styles__SpecsSection>
                <div
                  className="styles__SpecsSection-qm8p7s-5 gJxJfb"
                >
                  <h3>
                    Testing/QA
                  </h3>
                  <ul>
                    <li>
                      TypeScript
                    </li>
                    <li>
                      ESLint
                    </li>
                    <li>
                      Jest
                    </li>
                    <li>
                      Enzyme
                    </li>
                  </ul>
                </div>
              </styles__SpecsSection>
              <styles__SpecsSection>
                <div
                  className="styles__SpecsSection-qm8p7s-5 gJxJfb"
                >
                  <h3>
                    Deployment
                  </h3>
                  <ul>
                    <li>
                      Github
                    </li>
                    <li>
                      Codeship
                    </li>
                    <li>
                      AWS
                    </li>
                  </ul>
                </div>
              </styles__SpecsSection>
            </div>
          </styles__SiteSpecs>
          <p>
            Disable JavaScript to enable the noscript version!
          </p>
          <Memo()
            href="https://github.com/fantasticmrdavid/fantasticmrdavid"
            rel="noopener noreferrer"
            target="_blank"
          >
            <styles__Link
              href="https://github.com/fantasticmrdavid/fantasticmrdavid"
              rel="noopener noreferrer"
              target="_blank"
            >
              <a
                className="styles__Link-sc-1rd8ebj-0 fmVTeT"
                href="https://github.com/fantasticmrdavid/fantasticmrdavid"
                rel="noopener noreferrer"
                target="_blank"
              >
                Visit the Github repository
              </a>
            </styles__Link>
          </Memo()>
        </div>
      </styles__Content>
    </div>
  </styles__Container>
</Memo()>
`;

exports[`View -> About should render the About view (not loading) without throwing an error 1`] = `
<Memo()>
  <styles__Container
    isLoading={false}
  >
    <div
      className="styles__Container-qm8p7s-0 bLSmSO"
    >
      <styles__Bg>
        <div
          className="styles__Bg-qm8p7s-1 jLNyeV"
        >
          <Memo()
            isLoading={false}
          >
            <styles__Container
              isLoading={false}
            >
              <div
                className="styles__Container-sc-1pwogyu-0 fxQxCi"
              >
                <styles__Polygon>
                  <div
                    className="styles__Polygon-sc-1pwogyu-1 cXqKUn"
                  >
                    <styles__Front>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Front-sc-1pwogyu-8 ctLBcZ"
                      >
                        <Memo()
                          cycleColor={true}
                          direction="left"
                        >
                          <styles__Tracer
                            cycleColor={true}
                            direction="left"
                          >
                            <div
                              className="styles__Tracer-sc-18vfsm6-0 ixIudz"
                              direction="left"
                            />
                          </styles__Tracer>
                        </Memo()>
                      </div>
                    </styles__Front>
                    <styles__Back>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Back-sc-1pwogyu-3 bPrYvv"
                      >
                        <Memo()
                          cycleColor={true}
                        >
                          <styles__Tracer
                            cycleColor={true}
                          >
                            <div
                              className="styles__Tracer-sc-18vfsm6-0 fsXOaX"
                            />
                          </styles__Tracer>
                        </Memo()>
                      </div>
                    </styles__Back>
                    <styles__Top>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Top-sc-1pwogyu-6 cBRihP"
                      />
                    </styles__Top>
                    <styles__Bottom>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Bottom-sc-1pwogyu-7 fhmhBQ"
                      >
                        <Memo()
                          cycleColor={true}
                        >
                          <styles__Tracer
                            cycleColor={true}
                          >
                            <div
                              className="styles__Tracer-sc-18vfsm6-0 fsXOaX"
                            />
                          </styles__Tracer>
                        </Memo()>
                      </div>
                    </styles__Bottom>
                    <styles__Left>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Left-sc-1pwogyu-5 bjjeEn"
                      >
                        <Memo()
                          cycleColor={true}
                          direction="left"
                        >
                          <styles__Tracer
                            cycleColor={true}
                            direction="left"
                          >
                            <div
                              className="styles__Tracer-sc-18vfsm6-0 ixIudz"
                              direction="left"
                            />
                          </styles__Tracer>
                        </Memo()>
                      </div>
                    </styles__Left>
                    <styles__Right>
                      <div
                        className="styles__Side-sc-1pwogyu-2 styles__Right-sc-1pwogyu-4 jfedfq"
                      >
                        <Memo()
                          cycleColor={true}
                        >
                          <styles__Tracer
                            cycleColor={true}
                          >
                            <div
                              className="styles__Tracer-sc-18vfsm6-0 fsXOaX"
                            />
                          </styles__Tracer>
                        </Memo()>
                      </div>
                    </styles__Right>
                  </div>
                </styles__Polygon>
              </div>
            </styles__Container>
          </Memo()>
        </div>
      </styles__Bg>
      <styles__ProfilePhoto
        alt="Me"
        src="/assets/images/profile.jpg"
      >
        <img
          alt="Me"
          className="styles__ProfilePhoto-qm8p7s-2 bLzqZE"
          src="/assets/images/profile.jpg"
        />
      </styles__ProfilePhoto>
      <styles__Content>
        <div
          className="styles__Content-qm8p7s-3 bPqKyZ"
        >
          <p>
            Hi! I'm David, and I like making things.
            <br />
            <br />
            Since I was a kid I've been passionate about building and creating. I've always enjoyed the journey of taking an idea from concept and making it reality.
            <br />
            <br />
            I firmly believe that by empowering people with problem solving technology and empathy we can build a better world together.
          </p>
          <h2>
            Engineer
          </h2>
          <p>
            I've been building web projects for over a decade, starting from when I was in high school and needed a simple HTML page to display my artwork. From there my journey has taken me to Full-Stack LAMP Development working on vendor-side and agency projects alike, and then to leading Front-End and UX Engineering specialising in HTML5, CSS3, ES6 JavaScript and React. I love learning about new technologies to develop better and more effective ways to solve problems and get things done.
          </p>
          <h2>
            Artist
          </h2>
          <p>
            Drawing has been my happy place for as long as I can remember. While building software keeps the puzzle solving part of my brain busy, illustration, artwork, and tinkering have allowed me to stretch my creative boundaries. In my downtime I've drawn comics, exhibited artwork, designed and produced 3D prints, and made 
            <styles__SleeperLink
              href="https://www.youtube.com/watch?v=7xk4LmZ6hwc"
              rel="noopener noreferrer"
              target="_blank"
            >
              <Memo()
                className="styles__SleeperLink-qm8p7s-6 dpPLMK"
                href="https://www.youtube.com/watch?v=7xk4LmZ6hwc"
                rel="noopener noreferrer"
                target="_blank"
              >
                <styles__Link
                  className="styles__SleeperLink-qm8p7s-6 dpPLMK"
                  href="https://www.youtube.com/watch?v=7xk4LmZ6hwc"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  <a
                    className="styles__Link-sc-1rd8ebj-0 fmVTeT styles__SleeperLink-qm8p7s-6 dpPLMK"
                    href="https://www.youtube.com/watch?v=7xk4LmZ6hwc"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    other random things
                  </a>
                </styles__Link>
              </Memo()>
            </styles__SleeperLink>
             simply because they were too much fun.
          </p>
          <h2>
            About this site
          </h2>
          fantasticmrdavid.com.au was built with:
          <styles__SiteSpecs>
            <div
              className="styles__SiteSpecs-qm8p7s-4 fPddKv"
            >
              <styles__SpecsSection>
                <div
                  className="styles__SpecsSection-qm8p7s-5 gJxJfb"
                >
                  <h3>
                    Environment
                  </h3>
                  <ul>
                    <li>
                      ES6
                    </li>
                    <li>
                      Node.js
                    </li>
                    <li>
                      Webpack
                    </li>
                  </ul>
                </div>
              </styles__SpecsSection>
              <styles__SpecsSection>
                <div
                  className="styles__SpecsSection-qm8p7s-5 gJxJfb"
                >
                  <h3>
                    Architecture
                  </h3>
                  <ul>
                    <li>
                      React
                    </li>
                    <li>
                      Redux
                    </li>
                    <li>
                      Styled-Components
                    </li>
                  </ul>
                </div>
              </styles__SpecsSection>
              <styles__SpecsSection>
                <div
                  className="styles__SpecsSection-qm8p7s-5 gJxJfb"
                >
                  <h3>
                    Testing/QA
                  </h3>
                  <ul>
                    <li>
                      TypeScript
                    </li>
                    <li>
                      ESLint
                    </li>
                    <li>
                      Jest
                    </li>
                    <li>
                      Enzyme
                    </li>
                  </ul>
                </div>
              </styles__SpecsSection>
              <styles__SpecsSection>
                <div
                  className="styles__SpecsSection-qm8p7s-5 gJxJfb"
                >
                  <h3>
                    Deployment
                  </h3>
                  <ul>
                    <li>
                      Github
                    </li>
                    <li>
                      Codeship
                    </li>
                    <li>
                      AWS
                    </li>
                  </ul>
                </div>
              </styles__SpecsSection>
            </div>
          </styles__SiteSpecs>
          <p>
            Disable JavaScript to enable the noscript version!
          </p>
          <Memo()
            href="https://github.com/fantasticmrdavid/fantasticmrdavid"
            rel="noopener noreferrer"
            target="_blank"
          >
            <styles__Link
              href="https://github.com/fantasticmrdavid/fantasticmrdavid"
              rel="noopener noreferrer"
              target="_blank"
            >
              <a
                className="styles__Link-sc-1rd8ebj-0 fmVTeT"
                href="https://github.com/fantasticmrdavid/fantasticmrdavid"
                rel="noopener noreferrer"
                target="_blank"
              >
                Visit the Github repository
              </a>
            </styles__Link>
          </Memo()>
        </div>
      </styles__Content>
    </div>
  </styles__Container>
</Memo()>
`;
